--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/analytics": "^1.3.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookie": "^1.0.1",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "react": "^18.3.1",
